# insurance-data-ai

./: .bandit  .flake8  .gitignore  .pipeline_id  AI_DASHBOARD_DELIVERY_SUMMARY.md  ARCHITECTURE_DIAGRAM.md  CHATBOT_DEPLOYMENT_GUIDE.md  CHATBOT_FINAL_DELIVERY.md  CHATBOT_MULTI_ENVIRONMENT_GUIDE.md  CHATBOT_NATIVE_QUICKSTART.md  CHATBOT_QUICKSTART.md  COMMUNITY_EDITION_FIX.md  DASHBOARDS_DEPLOYMENT_GUIDE.md  DASHBOARDS_IMPLEMENTATION_SUMMARY.md  DASHBOARD_SETUP_GUIDE.md  DATABRICKS_IMPORT_GUIDE.md  DEPLOYMENT.md  DLT_DEPLOYMENT_GUIDE.md  DQ_MONITORING_GUIDE.md  FILES_UPDATED.txt  GOLD_LAYER_TRANSFORMATIONS.md  IMPROVEMENT_RECOMMENDATIONS.md  JOBS_QUICK_REFERENCE.md  JOBS_SETUP_GUIDE.md  KEY_FEATURES_RESTRUCTURE_SUMMARY.md  MANUAL_IMPORT_GUIDE.md  METHOD_3_DEPLOYMENT_GUIDE.md  ML_PREDICTIONS_QUICKSTART.md  PHASE_1_FILES_CREATED.txt  PHASE_1_IMPLEMENTATION.md  PHASE_2_IMPLEMENTATION.md  PHASE_3_IMPLEMENTATION.md  PROJECT_OVERALL_ASSESSMENT.md  PROJECT_STRUCTURE_VALIDATION.md  PROJECT_SUMMARY.md  QUICK_COMMANDS.md  QUICK_START.md  README.md  START_HERE.md  VALIDATION_REPORT.md  (+9 more)
.github/workflows/: ci-cd.yml
config/: template.json
resources/grants/: security_grants.yml
resources/jobs/: etl_orchestration.yml
resources/pipelines/: bronze_to_silver_dlt.yml.backup  bronze_to_silver_dlt_simplified.yml
resources/schemas/: bronze_schemas.yml  catalogs.yml  gold_schemas.yml  silver_schemas.yml
src/advanced_insurance/: ai_underwriting.sql  climate_risk_modeling.sql  embedded_insurance_api.sql  microinsurance_platform.sql  parametric_claims.sql  telematics_platform.py
src/analytics/: cost_optimization_analysis.py  data_quality_monitoring.py  data_quality_validation.py  dq_dashboard.py  pipeline_completion_report.py  pipeline_monitoring_dashboard.py  requirements_dashboard.txt
src/api/: main.py
src/bronze/: generate_claims_data.py  generate_customers_data.py  generate_policies_data.py
src/chatbot/: insurance_chatbot.py  insurance_chatbot_native.py  launch_chatbot.py  requirements.txt
src/gold/: build_customer_360.py  build_fraud_detection.py
src/ml/: check_prerequisites.py  forecast_claims.py  optimize_premiums.py  optimize_premiums_sklearn.py  predict_customer_churn.py  predict_customer_churn_sklearn.py  predict_fraud_enhanced.py  predict_fraud_enhanced_sklearn.py  run_all_predictions.py
src/pipelines/: bronze_to_silver_agents.py  bronze_to_silver_claims.py  bronze_to_silver_customers.py  (+2 more)
tests/: __init__.py  conftest.py  requirements.txt
(+25 files in other folders)
